--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;600&family=Proxima+Nova:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <title>NOTETAKINGAPP</title>
   </head>
   <body>
     <div id="root"></div>
